Regression: UI: texture properties tab missing on startup #126306
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#126306
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: macOS-13.6.8-x86_64-i386-64bit 64 Bits
Graphics card: Metal API AMD Radeon Pro 575 1.2
Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-08-12 22:42, hash:
ddc9f92777cd
Worked: (newest version of Blender that worked as expected)
Short description of error
Exact step for other to reproduce the error
Exact steps for others to reproduce the error
• Open default scene
• And look for texture properties tab
by me Kent Davis see screenshot.
Blender 4.3.0 Alpha for MacOS
Previous other ticket:
#125069 (comment)
Hi, thanks for the report. Can confirm. Omar's fix includes that button when "texture node" is added in compositor tab.
But is it intentional to skip the texture properties tab by default?
cc @OmarEmaraDev @JulianEisel (maybe this is part of brush asset project, I have not looked it further 😅)
@PratikPB2123
Yes tab by default I did put rename Library/Application Support/Blender/4.3 rename to be 4.3Hold folder and I inspect still not there tab texture already.
You are welcome.
Tab never appeared by default. It should appear if object has displacement modifier, is in sculpt mode or now if texture node is added in compositor
Thanks!
See my youtube. https://youtu.be/9OlOaXPafVE
@PratikPB2123
I let you know. I have get new MacBook Pro 16.2" M3 Pro last Saturday.
I am not use iMac 27" 2017 intel any more.
Not matter intel and M1, M2, M3 not matter. Only focus Blender bug code miss texture tab on Properties.
From what I can tell this is because we don't have a default texture painting brush anymore.
Previous behavior was a bit odd: The texture tab should show up in sculpt/paint modes to allow managing the texture for the active brush, however code would fallback to accessing texture paint settings, so in object mode we would show the texture tab for the texture paint brush. There is no such default brush anymore until texture paint mode is entered.
Now question is, should we restore that old, rather odd behavior of showing texture properties for texture paint mode in object mode?
Regression: UI: texture properties tab missing for Mac.to Regression: UI: texture properties tab missing on startupI think it all boils down to a question: is it just a visual difference, or is there some workflow which is more complicated/impossible with the current state?
Thing is, if we don't have texture user, then I'm not sure how we can expose the panel in a meaningful manner.
P.S. The current behavior is also somehow confusing. Once you went to Texture paint mode once, the Texture tab is always present. For the Sculpt/Weight mode the tab is only available in the Sculpt/Wright modes. Guess the Texture paint mode somehow creates new texture?
There's a fallback to texture paint data leading to this: https://projects.blender.org/blender/blender/src/branch/main/source/blender/blenkernel/intern/paint.cc#L480. When visiting texture paint mode, the default brush is created, so this query will successfully return texture paint brush and the tab will be displayed: https://projects.blender.org/blender/blender/src/branch/main/source/blender/editors/space_buttons/buttons_texture.cc#L273
I think we should just limit that active brush query to sculpt/paint modes.
Please put restore back thanks. Flame Fire too see ticket.
Textures for things like fluid simulations can't easily be created as a result of this change.
Steps to reproduce:
Physics -> Fluid
modifier.Flow
Texture
and notice you can't select any textures (as there are none to select), and can't create any textures (as the texture tab is hidden)@Alaska Ah, that is quite bad. Although, correct me if I'm wrong, in 4.2 you'd need to create a texture on the brush, and then assign it to the modifier.
@JulianEisel Can we expose the fluid/particle textures in the texture tab, similar to how it is done for the compositor?
I created !126893 to expose the tab when there's a fluid modifier that may use textures. Are there other cases to cover?
I guess covering all these cases, plus only showing brush textures in sculpt/paint modes is sufficient to address this.
@JulianEisel Cool!
Can't think of other cases currently. Tested particles and few other things, but there is no guarantee something is escaping my mind at this time.
I think we can close this now? When adding a fluid modifier with a Flow type the texture tab will show up (
48208ab2d8
), as well as in all sculpt/paint modes. Once texture painting has been triggered (in any mode) the tab will also show up now, I fixed a refreshing issue for this6f1676acc9
.So the tab should show up now whenever it's relevant.
@JulianEisel I think we can indeed close the task. If we've missed something we'll fix it as a followup.
No not yet and did not resolve.
Did not appear texture tab on properties.
@mac4kent hi, texture properties tab is now not exposed by default. From 4.3 onwards, it will only be visible if texture paint brush actually exists (see the commits from Julian #126306 (comment))
@PratikPB2123
Ok thanks.
I let you know. I am not use iMac Intel any more. I have get new MacBook Pro M3 Pro for now.
See Youtube: there is resolve.
https://youtu.be/nrKiVsTzpb0
Why they put "Archived" they should put "Resolve"
Thanks, Alaska corrected that
Good to know 🎉