source/blender/blenkernel/BKE_modifier.hh
@@ -32,6 +32,8 @@ struct Main;
 struct Mesh;
 struct ModifierData;
 struct Object;
+struct PointerRNA;
+struct PropertyRNA;
 struct Scene;
 struct StructRNA;
 struct IDCacheKey;
@@ -127,7 +129,11 @@ enum ModifierTypeFlag {
 ENUM_OPERATORS(ModifierTypeFlag, eModifierTypeFlag_AcceptsGreasePencil)
 
 using IDWalkFunc = void (*)(void *user_data, Object *ob, ID **idpoin, int cb_flag);
-using TexWalkFunc = void (*)(void *user_data, Object *ob, ModifierData *md, const char *propname);
+using TexWalkFunc = void (*)(void *user_data,
+                             Object *ob,
+                             ModifierData *md,
+                             const PointerRNA *ptr,
+                             PropertyRNA *texture_prop);
 
 enum ModifierApplyFlag {
   /** Render time. */
