source/blender/editors/space_buttons/buttons_texture.cc
@@ -20,6 +20,7 @@
 #include "DNA_ID.h"
 #include "DNA_brush_types.h"
 #include "DNA_linestyle_types.h"
+#include "DNA_modifier_types.h"
 #include "DNA_node_types.h"
 #include "DNA_object_force_types.h"
 #include "DNA_object_types.h"
@@ -211,7 +212,8 @@ static void buttons_texture_modifier_geonodes_users_add(
 static void buttons_texture_modifier_foreach(void *user_data,
                                              Object *ob,
                                              ModifierData *md,
-                                             const char *propname)
+                                             const PointerRNA *ptr,
+                                             PropertyRNA *texture_prop)
 {
   ListBase *users = static_cast<ListBase *>(user_data);
 
@@ -223,13 +225,10 @@ static void buttons_texture_modifier_foreach(void *user_data,
     }
   }
   else {
-    PropertyRNA *prop;
-
-    PointerRNA ptr = RNA_pointer_create(&ob->id, &RNA_Modifier, md);
-    prop = RNA_struct_find_property(&ptr, propname);
+    const ModifierTypeInfo *modifier_type = BKE_modifier_get_info((ModifierType)md->type);
 
     buttons_texture_user_property_add(
-        users, &ob->id, ptr, prop, N_("Modifiers"), RNA_struct_ui_icon(ptr.type), md->name);
+        users, &ob->id, *ptr, texture_prop, N_("Modifiers"), modifier_type->icon, md->name);
   }
 }
 
